Language recourses update!!

--- a/EasyBank/Views/Office/AddDepositCredit.cshtml
+++ b/EasyBank/Views/Office/AddDepositCredit.cshtml
@@ -63,7 +63,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" class="submit" />
+            <input type="submit" value=@Resources.Resource.Create class="submit" />
         </p>
     </fieldset>
 }
