--- a/EasyBank/Views/Office/CreditList.cshtml
+++ b/EasyBank/Views/Office/CreditList.cshtml
@@ -3,17 +3,16 @@
 <table>
     <tr>
         <th>
-
-            Credit Name
+            @Resources.Resource.CreditName
         </th>
         <th>
-            Duration
+            @Resources.Resource.Duration
         </th>
         <th>
-            Interest Rate
+            @Resources.Resource.InterestRate
         </th>
         <th>
-            Early Termination
+            @Resources.Resource.EarlyTerminationCredit
         </th>
 
     </tr>
