--- a/EasyBank/Views/Protected/AddPhoto.cshtml
+++ b/EasyBank/Views/Protected/AddPhoto.cshtml
@@ -49,7 +49,7 @@
             });
         </script>
     }
-    <input type="button" value="Shoot!" onclick="webcam.capture();" />
+    <input type="button" value=@Resources.Resource.TakeAPicture onclick="webcam.capture();" />
     <div id="Camera"></div>
     @*<div> @Html.ActionLink("Clients profile", "ClientsProfile", new { clientId = Model.ClientId })</div>*@
 }
