--- a/EasyBank/Views/Protected/ChooseBankProduct.cshtml
+++ b/EasyBank/Views/Protected/ChooseBankProduct.cshtml
@@ -9,16 +9,16 @@
              
         </th>
         <th>
-            Deposit Name
+            @Resources.Resource.DepositName
         </th>
         <th>
-            Duration
+            @Resources.Resource.Duration
         </th>
         <th>
-            Interest Rate
+            @Resources.Resource.InterestRate
         </th>
         <th>
-            Early Termination
+            @Resources.Resource.EarlyTermination
         </th>
 
     </tr>
