--- a/EasyBank/Views/Protected/ClientsList.cshtml
+++ b/EasyBank/Views/Protected/ClientsList.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc;
 <link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @{
-    ViewBag.Title = "Clients";
+    ViewBag.Title = @Resources.Resource.Clients;
 }
 <h2>@Html.Label(@Resources.Resource.ClientsListTitle)</h2>
 <p>
