--- a/EasyBank/Views/Protected/CurrencyList.cshtml
+++ b/EasyBank/Views/Protected/CurrencyList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EasyBank.Models.Currency
 @{
-    ViewBag.Title = "CurrencyList";
+    ViewBag.Title = @Resources.Resource.CurrencyList;
 }
 
 @using (Html.BeginForm("AddCurrency", "Protected", FormMethod.Post))
