--- a/EasyBank/Views/Protected/ShowPassport.cshtml
+++ b/EasyBank/Views/Protected/ShowPassport.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EasyBank.Models.ClientsImage
 
 @{
-    ViewBag.Title = "Clients passport";
+    ViewBag.Title = @Resources.Resource.ClientsPassport;
 }
 <h2>@Resources.Resource.Passport</h2>
 
