--- a/EasyBank/Views/Office/Login.cshtml
+++ b/EasyBank/Views/Office/Login.cshtml
@@ -2,7 +2,7 @@
 @using CaptchaMvc.HtmlHelpers
 
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = @Resources.Resource.LogInTitle;
 }
 
 <hgroup class="title">
@@ -10,7 +10,7 @@
 </hgroup>
 
 <section id="loginForm">
-<h3>Use your credentials to enter the system.</h3>
+<h3>@Resources.Resource.LoginHelpMessage</h3>
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
@@ -34,16 +34,16 @@
             </li>
             <li>
                 @*Capcha symbols amount*@
-                @Html.Captcha("Refresh", "Type the symbols", 4, "Wrong capcha input")
+                @Html.Captcha(@Resources.Resource.Refresh, @Resources.Resource.TypeTheSymbols, 4, @Resources.Resource.WrongCapchaInput)
             </li>
         </ol>
-        <input type="submit" value="Log in" />
+        <input type="submit" value=@Resources.Resource.LogIn />
     </fieldset>
 }
 </section>
 
 <section class="social" id="socialLoginForm">
-    <h2>Welcome to Easy Bank online service!</h2>
+    <h2>@Resources.Resource.WelcomeMessage</h2>
 
 </section>
 
