--- a/EasyBank/Views/Operation/AddMoney.cshtml
+++ b/EasyBank/Views/Operation/AddMoney.cshtml
@@ -97,10 +97,10 @@
             @Html.DropDownList("CurrencyName", itemList)
         
     </div>
-    
-    <input type="submit" value="submit" onclick="return confirm('Are you sure that you want to add money?') ? true : false;"/>
+
+    <input type="submit" value=@Resources.Resource.Submit  onclick="return confirm(@Resources.Resource.AskToAddMoney) ? true : false;" />
 }
 
 <p>
-    @Html.ActionLink("Back to profile", "ClientsProfile", "Protected", new { clientId = Model.ClientId }, null)
+    @Html.ActionLink(@Resources.Resource.BackToList, "ClientsProfile", "Protected", new { clientId = Model.ClientId }, null)
 </p>
