--- a/EasyBank/Views/Operation/ProfitCalc.cshtml
+++ b/EasyBank/Views/Operation/ProfitCalc.cshtml
@@ -9,7 +9,7 @@
     </div>
 
     <p>
-        <input type="submit" value="Enter" />
+        <input type="submit" value=@Resources.Resource.Enter />
     </p>
 
 }
