--- a/EasyBank/Views/Operation/TransferMoney.cshtml
+++ b/EasyBank/Views/Operation/TransferMoney.cshtml
@@ -80,7 +80,7 @@
     </div>
 </fieldset>
 
-<h4><b>Transfer Funds</b></h4>
+<h4><b>@Resources.Resource.TransferFunds</b></h4>
 @if (Model.AccountType.TypeName != "Credit")
 {
     using (Html.BeginForm("TransferMoney", "Operation", new{fromAccountId = Model.AccountId}, FormMethod.Post))
@@ -107,14 +107,14 @@
         </div>
 
         <br />
-        <input type="submit" value="submit" />
+    <input type="submit" value=@Resources.Resource.Submit />
     }
 }
 else
 {
-    <h6>Can't transfer money from credit account</h6>
+    <h6>@Resources.Resource.TransferErrorFromCreditAcc</h6>
 }
 
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink(@Resources.Resource.BackToList, "Index")
 </p>
