--- a/EasyBank/Views/Protected/AddTempClient.cshtml
+++ b/EasyBank/Views/Protected/AddTempClient.cshtml
@@ -52,14 +52,14 @@
             @Html.EditorFor(model => model.Email)
             @Html.ValidationMessageFor(model => model.Email)
         </div>
-        <label for=" file">Uplolad Image:</label>
+        <label for=" file">@Resources.Resource.UploadImage:</label>
         <input type="file" name="file" id="file" style="width: 100%;" />
         <p>
-            <input type="submit" value="Create" class="submit" />
+            <input type="submit" value=@Resources.Resource.Create class="submit" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "ClientsList")
+    @Html.ActionLink(@Resources.Resource.BackToList, "ClientsList")
 </div>
