--- a/EasyBank/Views/Operation/TotalDepositInterests.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositInterests.cshtml
@@ -1,3 +1,23 @@
-﻿<h2>Total Deposit Interests</h2>
+﻿@model List<EasyBank.Models.TotalAmountForCurrency>
 
-@Html.DisplayFor(model => Model)
+<h3>Total Deposit Interest</h3>
+<table>
+    <tr>
+        @foreach (var item in Model)
+        {
+            <th>
+                @Html.DisplayFor(modelItem => item.CurrencyName)
+            </th>
+        }
+    </tr>
+    <tr>
+        @foreach (var item in Model)
+        {
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalAmount)
+            </td>
+        }
+    </tr>
+</table>
+
+<br />
