--- a/EasyBank/Views/Shared/_Layout.cshtml
+++ b/EasyBank/Views/Shared/_Layout.cshtml
@@ -48,9 +48,17 @@
 
                             <li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account", new { id = WebSecurity.CurrentUserId }, null)</li>
                         }
+                        @if (User.IsInRole("Client"))
+                        {
+                            <li>@Html.ActionLink(@Resources.Resource.BankProducts, "DepositList", "Account", new { id = WebSecurity.CurrentUserId }, null)</li>
+                        }
                         @if (User.IsInRole("Operator"))
                         {
                             <li>@Html.ActionLink(@Resources.Resource.ClientsList, "ClientsList", "Protected")</li>
+                        }
+                        @if (User.IsInRole("Operator"))
+                        {
+                            <li>@Html.ActionLink(@Resources.Resource.BankProducts, "DepositList", "Office")</li>
                         }
                         @if (User.IsInRole("Administrator"))
                         {
