--- a/EasyBank/Views/Operation/AddMoney.cshtml
+++ b/EasyBank/Views/Operation/AddMoney.cshtml
@@ -13,9 +13,9 @@
         return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
     };
     $(document).ready(function () {
-        $("#Amount").val($("#Amount").val().replace(',', '.'));
-        $("#Amount").keyup(function() {
+        $(document).on('submit','#submitForm',function() {
             $("#Amount").val( $("#Amount").val().replace(',','.') );
+            alert();
         });
     });
 </script>
