--- a/EasyBank/Views/Operation/TransferMoney.cshtml
+++ b/EasyBank/Views/Operation/TransferMoney.cshtml
@@ -13,9 +13,9 @@
         return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
     };
     $(document).ready(function () {
-        $("#Amount").val($("#Amount").val().replace(',', '.'));
-        $("#Amount").keyup(function () {
+        $(document).on('submit', '#submitForm', function () {
             $("#Amount").val($("#Amount").val().replace(',', '.'));
+            alert();
         });
     });
 </script>
@@ -83,7 +83,7 @@
 <h4><b>@Resources.Resource.TransferFunds</b></h4>
 @if (Model.AccountType.TypeName != "Credit")
 {
-    using (Html.BeginForm("TransferMoney", "Operation", new{fromAccountId = Model.AccountId}, FormMethod.Post))
+    using (Html.BeginForm("TransferMoney", "Operation", new{fromAccountId = Model.AccountId}, FormMethod.Post, new { @Id = "submitForm" }))
     {
         Model.AccountNumber = "";
         
