--- a/EasyBank/Views/Shared/_Layout.cshtml
+++ b/EasyBank/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 <a href="/Home/ChangeCulture?lang=uk-UA" name="lang">UA</a>
                 <a href="/Home/ChangeCulture?lang=en" name="lang">EN</a>
                 <a href="/Home/ChangeCulture?lang=ru" name="lang">RU</a>
-                <p class="site-title">@Html.ActionLink("Easy Bank", "Index", "Home")</p>
+                <p class="site-title">@Html.ActionLink("Easy Bank", "Index", "Home")@if(!User.IsInRole("Client")){ <sup id="supLogo">office</sup> }</p>
             </div>
             <div class="float-right">
                 <section id="login">
@@ -55,18 +55,8 @@
                         @if (User.IsInRole("Administrator"))
                         {
                             <li>@Html.ActionLink(@Resources.Resource.Currencies, "CurrencyList", "Protected")</li>
-                        }
-                        @if (User.IsInRole("Administrator"))
-                        {
                             <li>@Html.ActionLink(@Resources.Resource.OperatorsList, "OperatorsList", "Protected")</li>
-                        }
-
-                        @if (User.IsInRole("Administrator"))
-                        {
                             <li>@Html.ActionLink(@Resources.Resource.BankProducts, "DepositList", "Office")</li>
-                        }
-                        @if (User.IsInRole("Administrator"))
-                        {
                             <li>@Html.ActionLink(@Resources.Resource.FinancialReports, "TotalDepositedAmount", "Operation")</li>
                         }
                                     
