Added Statistics Calculation

--- a/EasyBank/Views/Operation/TotalCreditInterests.cshtml
+++ b/EasyBank/Views/Operation/TotalCreditInterests.cshtml
@@ -1,4 +1,6 @@
-﻿<h3>Total Credit Interest</h3>
+﻿@model List<EasyBank.Models.TotalAmountForCurrency>
+
+<h3>Total Credit Interest</h3>
 <table>
     <tr>
         @foreach (var item in Model)
