--- a/EasyBank/Views/Operation/TotalPlannedDepositInterests.cshtml
+++ b/EasyBank/Views/Operation/TotalPlannedDepositInterests.cshtml
@@ -1,6 +1,6 @@
-﻿@model List<EasyBank.Models.TotalAmountForCurrency>
+﻿@model List<EasyBank.Models.VirtualAccount>
 
-<h3>Total Credited Amount</h3>
+<h3>Total Deposited Amount</h3>
 <table>
     <tr>
         @foreach (var item in Model)
