--- a/EasyBank/Views/Account/LoginWithCapcha.cshtml
+++ b/EasyBank/Views/Account/LoginWithCapcha.cshtml
@@ -30,12 +30,11 @@
                 @Html.PasswordFor(m => m.Password)
                 @Html.ValidationMessageFor(m => m.Password)
             </li>
-           @* <li>
-                
+            <li>
+                @*Capcha symbols amount*@
                 @Html.Captcha(@Resources.Resource.Refresh, @Resources.Resource.TypeTheSymbols, 4, @Resources.Resource.WrongCapchaInput)
                 
             </li>
-    *@
 
         </ol>
         @ViewBag.Message
