Added Bank Accounts Display

--- a/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
+++ b/EasyBank/Views/Operation/TotalDepositedAmount.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<EasyBank.Models.TotalAmountForCurrency>
-
+@Html.Action("BankAccounts","Office")
+<br/>
 <h3>Total Deposited Amount</h3>
 <table>
     <tr>
