--- a/EasyBank/Views/Shared/_Layout.cshtml
+++ b/EasyBank/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 <a href="/Home/ChangeCulture?lang=uk-UA" name="lang">UA</a>
                 <a href="/Home/ChangeCulture?lang=en" name="lang">EN</a>
                 <a href="/Home/ChangeCulture?lang=ru" name="lang">RU</a>
-                <p class="site-title">@Html.ActionLink("Easy Bank", "Index", "Home")@if(!User.IsInRole("Client")){ <sup id="supLogo">office</sup> }</p>
+                <p class="site-title">@Html.ActionLink("Easy Bank", "Index", "Home")@if(User.IsInRole("Administrator") || User.IsInRole("Operator")){ <sup id="supLogo">office</sup> }</p>
             </div>
             <div class="float-right">
                 <section id="login">
@@ -43,20 +43,12 @@
 @*<li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Protected", new {clientId = WebSecurity.GetUserId(User.Identity.Name) })</li>*@
 @*<li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Protected")</li>*@
 @* <li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account", new { clientId = WebSecurity.GetUserId(User.Identity.Name) }, htmlAttributes: new { clientId = WebSecurity.GetUserId(User.Identity.Name) })</li>*@
-
                             <li>@Html.ActionLink(@Resources.Resource.Details, "ClientsProfile", "Account", new { id = WebSecurity.CurrentUserId }, null)</li>
-                        }
-                        @if (User.IsInRole("Client"))
-                        {
                             <li>@Html.ActionLink(@Resources.Resource.BankProducts, "DepositList", "Account", new { id = WebSecurity.CurrentUserId }, null)</li>
                         }
                         @if (User.IsInRole("Operator"))
                         {
                             <li>@Html.ActionLink(@Resources.Resource.ClientsList, "ClientsList", "Protected")</li>
-                        }
-                        @if (User.IsInRole("Operator"))
-                        {
-
                             <li>@Html.ActionLink(@Resources.Resource.BankProducts, "DepositList", "Office")</li>
                         }
                         @if (User.IsInRole("Administrator"))
