--- a/EasyBank/Views/Protected/AccountHistory.cshtml
+++ b/EasyBank/Views/Protected/AccountHistory.cshtml
@@ -20,7 +20,7 @@
 
     @foreach (var item in Model)
     {
-        <tr style="height: 60px; border-radius:10px;">
+        <tr style="height: 60px; border-radius: 10px;">
             <td>
                 @if (item.FromAccountId == null)
                 {
@@ -53,7 +53,7 @@
             </td>
 
 
-            @if (item.Amount > 0)
+            @if (item.Amount > 0 || (item.Amount > 0 && item.ToAccountId == ViewBag.ClientCardId))
             { 
                 <td id="positiveAmount" style="color: green">
                     @Html.DisplayFor(modelItem => item.Amount)
@@ -72,11 +72,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.ToAccount.AccountNumber)
             </td>
-
         </tr>
-    }   
+    }
 </table>
 <br />
-@Resources.Resource.Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) @Resources.Resource.Of @Model.PageCount
-
-@Html.PagedListPager(Model, page => Url.Action("AccountHistory", new { page, sort = ViewBag.CurrentSort }))
+<div style="width: 100%">
+    <div style="margin: 0 auto; width: 170px;">
+        <span style="padding-left: 30px">
+            @Resources.Resource.Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) @Resources.Resource.Of @Model.PageCount
+        </span>
+        @Html.PagedListPager(Model, page => Url.Action("AccountHistory", new { page, sort = ViewBag.CurrentSort }))
+    </div>
+</div>
