--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -6,7 +6,7 @@
 <script>
     $(document).ready(function () {
         prevTriggeredTrId = "";
-        
+
         $("#types").css("display", "none");
         $("#currencies").css("display", "none");
         $("#depositTypes").css("display", "none");
@@ -18,7 +18,7 @@
         $(".selectableTr").click(function () {
             if (this.id != prevTriggeredTrId) {
                 $(this).css("background-color", "white");
-                $("#" + prevTriggeredTrId.toString()).css("background-color", "#efeeef")
+                $("#" + prevTriggeredTrId.toString()).css("background-color", "rgba(0,0,0,0)");
                 prevTriggeredTrId = this.id;
                 parms = this.id.split('-', 2);
                 $("#payInButton").attr("href", "/Operation/AddMoney/" + parms[0]);
@@ -62,7 +62,7 @@
             }
             $("#submitButton").css("display", "inline-block");
         });
-        $("div #cancelButton").click(function() {
+        $("div #cancelButton").click(function () {
             $("#types").css("display", "none");
             $("#currencies").css("display", "none");
             $("#depositTypes").css("display", "none");
@@ -73,158 +73,164 @@
             $("#showFirstBox").css("display", "inline-block");
         });
         $("select[id='AccountType'] option:lt(1)").attr("disabled", "disabled");
-        $("select[name='CurrencyId'] option:lt(1)").attr("disabled", "disabled");
-        $("select[name='DepositId'] option:lt(1)").attr("disabled", "disabled");
-        $("select[name='CreditId'] option:lt(1)").attr("disabled", "disabled");
-        $("input #submitButton").click(function() {
-            
-        })
+        $("select[id='CurrencyId'] option:lt(1)").attr("disabled", "disabled");
+        $("select[id='DepositId'] option:lt(1)").attr("disabled", "disabled");
+        $("select[id='CreditId'] option:lt(1)").attr("disabled", "disabled");
     });
 </script>
 <h2>@Html.Label(@Resources.Resource.ClientsProfileTitle)</h2>
-<table>
-    <tr>
-        <td>
-            @Html.DisplayNameFor(model => model.Name)
-        </td>
-        <td>
-            <div class="display-field">
-                @Html.DisplayFor(model => model.Name)
-            </div>
-        </td>
-    </tr>
+<div style="background-color: rgba(255,255,255, 0.5); float: left; padding-top: 14px; padding-left: 20px; padding-bottom: 30px;padding-right: 25px; border-radius: 10px;">
+    <div style="float: left;">
+        <table>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.Name)
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(model => model.Name)
+                    </div>
+                </td>
+            </tr>
 
-    <tr>
-        <td>
-            @Html.DisplayNameFor(model => model.Surname)
-        </td>
-        <td>
-            <div class="display-field">
-                @Html.DisplayFor(model => model.Surname)
-            </div>
-        </td>
-    </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.Surname)
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(model => model.Surname)
+                    </div>
+                </td>
+            </tr>
 
-    <tr>
-        <td>
-            @Html.DisplayNameFor(model => model.Email)
-        </td>
-        <td>
-            <div class="display-field">
-                @Html.DisplayFor(model => model.Email)
-            </div>
-        </td>
-    </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.Email)
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(model => model.Email)
+                    </div>
+                </td>
+            </tr>
 
-    <tr>
-        <td>
-            @Html.DisplayNameFor(model => model.BirthDate)
-        </td>
-        <td>
-            <div class="display-field">
-                @Html.DisplayFor(model => model.BirthDate)
-            </div>
-        </td>
-    </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.BirthDate)
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(model => model.BirthDate)
+                    </div>
+                </td>
+            </tr>
 
-    <tr>
-        <td>
-            @Html.DisplayNameFor(model => model.PIdNumber)
-        </td>
-        <td>
-            <div class="display-field">
-                @Html.DisplayFor(model => model.PIdNumber)
-            </div>
-        </td>
-    </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.PIdNumber)
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(model => model.PIdNumber)
+                    </div>
+                </td>
+            </tr>
 
-    <tr>
-        <td>
-            @Html.DisplayNameFor(model => model.RegistrationDate)
-        </td>
-        <td>
-            <div class="display-field">
-                @Html.DisplayFor(model => model.RegistrationDate)
-            </div>
-        </td>
-    </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.RegistrationDate)
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(model => model.RegistrationDate)
+                    </div>
+                </td>
+            </tr>
 
-</table>
+        </table>
+    </div>
 
-@Html.Action("ShowClientPhoto", new { id = Model.ClientId })
+    <div style="float: left; padding-left: 80px; padding-top: 17px;">
 
-@*-@Html.ActionLink(@Resources.Resource.AddAccount, "AddAccount", new { clientId = Model.ClientId }, new{@id="createAccount"})*@
+        <div style="width: 180px; height: 135px; background-color: white">
+            @Html.Action("ShowClientPhoto", new { id = Model.ClientId })
+        </div>
+        @*-@Html.ActionLink(@Resources.Resource.AddAccount, "AddAccount", new { clientId = Model.ClientId }, new{@id="createAccount"})*@
 
-<div>
-    @Html.ActionLink(@Resources.Resource.AddPhoto, "AddPhoto", new { id = Model.ClientId })
+        <div>
+            @Html.ActionLink(@Resources.Resource.AddPhoto, "AddPhoto", new { id = Model.ClientId })
+        </div>
+    </div>
 </div>
-<input type="button" id="showFirstBox" value="@Resources.Resource.AddAccount">
+<br/>
+<div style="clear: both; background-color: rgba(255,255,255, 0.4); float: left; padding-top: 10px; padding-left: 20px; padding-bottom: 30px; border-radius: 10px; margin-top: 10px; min-width: 1000px;">
+    <input type="button" id="showFirstBox" value="@Resources.Resource.AddAccount">
+    <div id="accCreateDiv" style="clear: both">
+        @Html.Action("AddAccountPartial")
+    </div>
 
-<div id="accCreateDiv">
-    @Html.Action("AddAccountPartial")
+    <table>
+        @if (Model.Accounts.Count() != 0)
+        {
+            <tr>
+                <th>@Html.Label(@Resources.Resource.AccNumb) </th>
+                <th>@Html.Label(@Resources.Resource.ExpDate) </th>
+                <th>@Html.Label(@Resources.Resource.Amount)</th>
+                <th>@Html.Label(@Resources.Resource.Currency)</th>
+                <th>@Html.Label(@Resources.Resource.Type)</th>
+                <th>@Html.Label(@Resources.Resource.Status)</th>
+            </tr>
+        }
+        else
+        {
+            @Resources.Resource.AccountsAreAbsent
+        }
+
+        @foreach (var item in Model.Accounts)
+        {
+        
+            <tr id="@item.AccountId-@item.AccountType.TypeName" class="selectableTr">
+                <td>
+                    <div class="display-field">
+                        @Html.ActionLink(@Html.DisplayFor(modelItem => item.AccountNumber).ToString(), "AccountHistory", "Protected", new { id = item.AccountId }, null)
+                    </div>
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(modelItem => item.ExpirationDate)
+                    </div>
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(modelItem => item.Amount)
+                    </div>
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(modelItem => item.Currency.CurrencyName)
+                    </div>
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(modelItem => item.AccountType.TypeName)
+                    </div>
+                </td>
+                <td>
+                    <div class="display-field">
+                        @Html.DisplayFor(modelItem => item.AccountStatus.StatusName)
+                    </div>
+                </td>
+                <td>
+                    @Html.ActionLink(@Resources.Resource.Freeze, "Freeze", new { id = item.AccountId, clientId = Model.ClientId }) |
+                    @Html.ActionLink(@Resources.Resource.Block, "Block", new { id = item.AccountId, clientId = Model.ClientId }) |
+                    @Html.ActionLink(@Resources.Resource.SetToNormal, "SetToNormal", new { id = item.AccountId, clientId = Model.ClientId })
+                </td>
+            </tr>
+        
+        }
+    </table>
+    <a href="#" id="payInButton" style="opacity: 0">@Resources.Resource.PayIn</a>
+    <a href="#" id="payOutButton" style="opacity: 0">@Resources.Resource.PayOut</a>
+    <a href="#" id="transferButton" style="opacity: 0">@Resources.Resource.TransMoney</a>
 </div>
-
-<table>
-    @if (Model.Accounts.Count() != 0)
-    {
-        <tr>
-            <th>@Html.Label(@Resources.Resource.AccNumb) </th>
-            <th>@Html.Label(@Resources.Resource.ExpDate) </th>
-            <th>@Html.Label(@Resources.Resource.Amount)</th>
-            <th>@Html.Label(@Resources.Resource.Currency)</th>
-            <th>@Html.Label(@Resources.Resource.Type)</th>
-            <th>@Html.Label(@Resources.Resource.Status)</th>
-        </tr>
-    }
-    else
-    {
-        @Resources.Resource.AccountsAreAbsent
-    }
-
-    @foreach (var item in Model.Accounts)
-    {
-        
-        <tr id="@item.AccountId-@item.AccountType.TypeName" class="selectableTr">
-            <td>
-                <div class="display-field">
-                    @Html.ActionLink(@Html.DisplayFor(modelItem => item.AccountNumber).ToString(), "AccountHistory", "Protected", new { id = item.AccountId }, null)
-                </div>
-            </td>
-            <td>
-                <div class="display-field">
-                    @Html.DisplayFor(modelItem => item.ExpirationDate)
-                </div>
-            </td>
-            <td>
-                <div class="display-field">
-                    @Html.DisplayFor(modelItem => item.Amount)
-                </div>
-            </td>
-            <td>
-                <div class="display-field">
-                    @Html.DisplayFor(modelItem => item.Currency.CurrencyName)
-                </div>
-            </td>
-            <td>
-                <div class="display-field">
-                    @Html.DisplayFor(modelItem => item.AccountType.TypeName)
-                </div>
-            </td>
-            <td>
-                <div class="display-field">
-                    @Html.DisplayFor(modelItem => item.AccountStatus.StatusName)
-                </div>
-            </td>
-            <td>
-                @Html.ActionLink(@Resources.Resource.Freeze, "Freeze", new { id = item.AccountId, clientId = Model.ClientId }) |
-                @Html.ActionLink(@Resources.Resource.Block, "Block", new { id = item.AccountId, clientId = Model.ClientId }) |
-                @Html.ActionLink(@Resources.Resource.SetToNormal, "SetToNormal", new { id = item.AccountId, clientId = Model.ClientId })
-            </td>
-        </tr>
-        
-    }
-</table>
-<a href="#" id="payInButton" style="opacity: 0">@Resources.Resource.PayIn</a>
-<a href="#" id="payOutButton" style="opacity: 0">@Resources.Resource.PayOut</a>
-<a href="#" id="transferButton" style="opacity: 0">@Resources.Resource.TransMoney</a>
-
