--- a/EasyBank/Views/Protected/CurrencyList.cshtml
+++ b/EasyBank/Views/Protected/CurrencyList.cshtml
@@ -2,14 +2,32 @@
 @{
     ViewBag.Title = @Resources.Resource.CurrencyList;
 }
+<fieldset>
+    @using (Html.BeginForm("AddCurrency", "Protected", FormMethod.Post))
+    {
+        <h5>Назва валюти</h5>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.CurrencyName)
+            @Html.ValidationMessageFor(model => model.CurrencyName)
+        </div>
+        <h5>Курс покупки</h5>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.PurchaseRate)
+            @Html.ValidationMessageFor(model => model.PurchaseRate)
+        </div>
+        <h5>Курс продажі</h5>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.SaleRate)
+            @Html.ValidationMessageFor(model => model.SaleRate)
+        </div>
+        <input type="submit" value="@Resources.Resource.AddCurrency" />
+    }
+    @Html.Raw(TempData["verifyDelete"])
+    @Html.Raw(TempData["verifyAdd"])
 
-@using (Html.BeginForm("AddCurrency", "Protected", FormMethod.Post))
-{
-    @Html.TextBox("name")
-    <input type="submit" value="@Resources.Resource.AddCurrency" />
-}
-@Html.Raw(TempData["verifyDelete"])
-@Html.Raw(TempData["verifyAdd"])
+
+
+</fieldset>
 
 <h2>@Resources.Resource.CurrencyList</h2>
 
